--- a/lastOfLike.html
+++ b/lastOfLike.html
@@ -36,7 +36,7 @@
       </section>
       <section class=" flex justify-center items-center gap-5">
        <a href="likeAfter.html"> <button class=" px-6 py-4 bg-[#F3F3F3] text-3xl font-bold">&lt;</button></a>
-        <a href="#"><button class=" px-6 py-4 text-white bg-[#3399CC] text-3xl ">Nachster Schritt</button></a>
+        <a href="index.html"><button class=" px-6 py-4 text-white bg-[#3399CC] text-3xl ">Nachster Schritt</button></a>
       </section>
     </main>
   </body>
